# ox-orch

./: .gitignore  .readthedocs.yaml  Makefile  README.rst  pyproject.toml
django_installer/: utils.py
django_installer/core/: __init__.py  apps.py  dependency.py  files.py  registry.py  state.py
django_installer/core/operations/: .plan.py.kak.cwmh6Y  __init__.py  apps_plan.py  base.py  django.py  plan.py  python.py
django_installer/core/state/: __init__.py  backend.py  base.py
docs/source/: api.rst  conf.py  guide.rst  index.rst  todo.rst
docs/source/_ext/: public_api.py
docs/source/api/: apps.rst  core.rst  django.rst  hooks.rst  operations.rst
docs/source/api/apps/: app.rst  provider.rst  state.rst  state_store.rst  store.rst
docs/source/api/core/: contexts.rst  events.rst  pydantic.rst  registry.rst  shell.rst  state.rst  stores.rst  trace.rst
docs/source/api/django/: operations.rst  project.rst  shell.rst
docs/source/api/hooks/: base.rst  loader.rst  logging.rst  progress.rst  trace.rst
docs/source/api/operations/: apps.rst  base.rst  execution.rst  install.rst  multiprocess.rst  plan.rst  shell.rst
docs/source/guide/: 00-overview.rst  10-operations.rst  11-states.rst  12-contexts.rst  13-execution.rst  14-apps.rst  21-shell.rst  30-plugins.rst
docs/source/static/: .$guide-apps-workflow.drawio.bkp  .$guide-contexts-workflow.drawio.bkp  .$guide-execution.drawio.bkp  .$overview-classes.drawio.bkp  guide-apps-workflow.drawio  overview-classes.drawio
instance/: settings.py
ox_installer/core/: apps.py  files.py  state.py
ox_installer/operations/: __init__.py  apps.py  base.py  django.py  plan.py  python.py
ox_orch/: utils.py
ox_orch/apps/: __init__.py  app.py  provider.py  state.py  state_store.py  store.py
ox_orch/cli/: __init__.py  apps.py  base.py  info.py  main.py  run.py  utils.py
ox_orch/core/: __init__.py  app_registry.py  apps.py  contexts.py  events.py  execution.py  executor.py  files.py  pydantic.py  registry.py  resolver.py  shell.py  state.py  stores.py  trace.py
ox_orch/django/: __init__.py  operations.py  project.py  shell.py
ox_orch/django/operations/: base.py
ox_orch/hooks/: __init__.py  base.py  loader.py  logging.py  progress.py  trace.py
ox_orch/operations/: __init__.py  apps.py  base.py  django.py  execution.py  install.py  multiprocess.py  plan.py  shell.py  subprocess.py
tests/: .conftest.py.kak.ias5ov  conftest.py  test_utils.py
tests/apps/: test_app.py  test_provider.py  test_state.py
tests/cli/: test_main.py
tests/core/: conftest.py  test___init__.py  test_app_registry.py  test_contexts.py  test_execution.py  test_files.py  test_operations_base.py  test_operations_plan.py  test_operations_plan_and_apps_plan.py  test_pydantic.py  test_registry.py  test_resolvers.py  test_state.py  test_state_backend.py  test_state_base.py  test_store.py  test_trace.py
tests/data/: state-0.json  state-0.yaml
tests/django/: conftest.py  test_operations.py  test_project.py
tests/hooks/: test_base.py  test_logging.py  test_progress.py
tests/integration/: conftest.py  test_django.py  test_install.py
tests/operations/: conftest.py  test___init__.py  test_apps.py  test_base.py  test_execution.py  test_install.py  test_multiprocess.py  test_plan.py  test_plan_and_apps_plan.py  test_shell.py  test_subprocess.py
