#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"


[project]
name = "django-installer"
description = "Define application installation workflow, and allow users to install them."
readme = "README.rst"
license = "GPL-3.0-or-later"
version = "0.0.1"

# dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",

    "Typing :: Typed",
]
dependencies = [
    "click>=8.4.1",
    "packaging>=26.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.scripts]
ox-orch = "ox_orch.cli.main:cli"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipython>=9.14.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.15",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.10.4",
    "sphinx-rtd-theme>=3.1.0",
]
django = [
    "django>=6.0.5",
    "djangorestframework>=3.17.1",
]


# [tool.poetry]
# version = "0.0.1"
# authors = ["Thomas Baquet <thomas oxylus app>"]
# packages = [
#     { include = "django_installer" },
# ]
# include = [
#     # assets are provided as npm packages
#     # {path="assets", format="sdist"},
#     {path="docs", format="sdist"},
#     {path="tests", format="sdist"},
# ]
# exclude = [
# ]

[tool.setuptools]
packages = ["ox_orch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ox_orch"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "instance.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]


[tool.black]
line-length = 120
exclude = '''
    /(
          \.egg
        | \.git
        | \.hg
        | \.tox
        | \._build
        | \.build
        | \.bulk-out
        | \.dist
        | \.__pycache__
        | \.venv
        | \.migrations
        | \.static
        | \.ox/settings
        | \.scripts
    )
'''


[tool.ruff]
line-length = 120
exclude = [
    "egg",
    "git",
    "hg",
    "tox",
    "_build",
    "build",
    "dist",
    "__pycache__",
    "venv",
    "*/migrations",
    "static",
    "ox/settings",
    "scripts/",
]


[tool.semantic_release]
version_variables = ["django_installer/__init__.py:__version__"]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
